WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158879
Potential null dereferencing on a detached positioned renderer.
https://bugs.webkit.org/show_bug.cgi?id=158879
Summary
Potential null dereferencing on a detached positioned renderer.
alan
Reported
2016-06-17 11:15:04 PDT
in RenderBlock::markFixedPositionObjectForLayoutIfNeeded()
Attachments
Patch
(4.25 KB, patch)
2016-06-17 12:44 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-06-17 12:44:00 PDT
Created
attachment 281578
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-06-17 12:47:33 PDT
Comment on
attachment 281578
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281578&action=review
> Source/WebCore/ChangeLog:5 > +
https://bugs.webkit.org/show_bug.cgi?id=158879
> +
Radar?
WebKit Commit Bot
Comment 3
2016-06-17 13:21:18 PDT
Comment on
attachment 281578
[details]
Patch Clearing flags on attachment: 281578 Committed
r202177
: <
http://trac.webkit.org/changeset/202177
>
WebKit Commit Bot
Comment 4
2016-06-17 13:21:22 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug