Potential null dereferencing on a detached positioned renderer. https://bugs.webkit.org/show_bug.cgi?id=158879

Reviewed by Simon Fraser.

This patch fixes the case when the while loop to search for the absolute positioned ancestor
returns null (it happens when positioned renderer has been detached from the render tree).

Speculative fix.

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::markFixedPositionObjectForLayoutIfNeeded):
* rendering/RenderBlock.h:


Canonical link: https://commits.webkit.org/176953@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202177 268f45cc-cd09-0410-ab3c-d52691b4dbfc